--- a/less/intro.less
+++ b/less/intro.less
@@ -36,11 +36,14 @@
 
 @media @mobile {
     .intro-text {
+        display: flex;
+        flex-direction: column;
         width: 90%;
+        margin: 0 auto;
     } 
 
     p {
-        width: 85%; 
+        margin: 2rem 0 0 0;
         font-size: 1.5rem;
         line-height: 1.5rem;
     }
