--- a/less/nav.less
+++ b/less/nav.less
@@ -16,12 +16,16 @@
             }
         }      
     } 
-    @media @mobile {
+    
+}
+@media @mobile {
+    .signup-nav {
         background-color: @primary;
-        h1{
-            width: auto;
-            padding: 1rem 0 1rem 1.25rem;
+        height: 25%;
 
+        h1{
+            width: 100%;
+            padding: 1rem 0 1rem 1.25rem;
         }
     }
 }
